--- a/solutions/custom-idp/install.yaml
+++ b/solutions/custom-idp/install.yaml
@@ -584,7 +584,12 @@ Resources:
               Bool:
                 aws:SecureTransport: false
           - Effect: Allow
-            Action: s3:*
+            Action: 
+              - "s3:GetObject"
+              - "s3:PutObject"
+              - "s3:ListBucket"
+              - "s3:GetBucketVersioning"
+              - "s3:GetObjectVersion"
             Principal:
               AWS:
                 - !GetAtt CodePipelineServiceRole.Arn
@@ -935,6 +940,13 @@ Resources:
       GroupName: !Sub ${AWS::StackName}-security-group
       GroupDescription: !Sub ${AWS::StackName}-security-group
       VpcId: !Ref VPC
+      SecurityGroupEgress: 
+           - IpProtocol: -1
+             CidrIp: 0.0.0.0/0
+             Description: Allow all outbound traffic by default
+             FromPort: -1
+             ToPort: -1
+            
     
 Outputs:
   Pipeline:
