--- a/.github/ISSUE_TEMPLATE/enhancement_request.yml
+++ b/.github/ISSUE_TEMPLATE/enhancement_request.yml
@@ -1,8 +1,8 @@
 ---
 name: Enhancement request
 about: Suggest an idea to enhance some existing feature
-title: ''
-labels: enhancement
+title: '[Enhancement]: <title>'
+labels: ["enhancement", "Needs Triage"]
 assignees: ''
 
 ---
