--- a/.github/ISSUE_TEMPLATE/help.yml
+++ b/.github/ISSUE_TEMPLATE/help.yml
@@ -1,5 +1,6 @@
 name: Help and troubleshooting
 description: Create a request for help and troubleshooting.
+title: "[HELP] <title>"
 labels: "help"
 
 body:
