--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -1,6 +1,7 @@
 name: Bug report
 description: Create a report to help us improve.
-labels: "bug"
+tile: '[BUG] <title>'
+labels: ["bug", "Needs Triage"]
 
 body:
   - type: textarea
