added support to add a new AD user
added support to add a new AD user

--- a/solutions/custom-idp/custom-idp.yaml
+++ b/solutions/custom-idp/custom-idp.yaml
@@ -630,6 +630,9 @@ Resources:
             
 
 Outputs:
+  IdpHandlerLayer:
+    Description: IDP Handler Layer
+    Value: !Ref IdpHandlerLayer
   IdpHandlerFunction:
     Description: IDP Handler Arn
     Value: !GetAtt IdpHandlerFunction.Arn
