--- a/solutions/custom-idp/examples/activedirectory/one-click-template.yaml
+++ b/solutions/custom-idp/examples/activedirectory/one-click-template.yaml
@@ -11,13 +11,23 @@ Parameters:
     MinLength: 5
     MaxLength: 20
     NoEcho: true
+  DirectoryNewUsername:
+    Description: New AD Username
+    Type: String
+    MinLength: 5
+    MaxLength: 20
+    NoEcho: true
+    Default: 'johnsmith'
   DirectoryBIOSName:
     Description: Microsoft ActiveDirectory BIOS Name
     Type: String
     Default: corp
     MinLength: 3
     MaxLength: 20
-
+  DirectorySearchBase:
+    Description: Active Directory Search Base e.g. OU=Users,OU=corp,DC=corp,DC=demoftp,DC=com
+    Type: String
+    Default: "OU=Users,OU=corp,DC=corp,DC=demoftp,DC=com"
   SecretsManagerPermissions:
     Description: Grant Lambda execution role permission to read Secrets Manager secrets (required to use the secrets_manager module)
     Type: String
@@ -25,7 +35,6 @@ Parameters:
     AllowedValues:
       - 'true'
       - 'false'
-
   UserNameDelimiter:
     Description: Delimiter for user name
     Type: String
@@ -108,6 +117,22 @@ Resources:
         Parameters:
           AuthorizationFunctionArn: !GetAtt CustomIdP.Outputs.IdpHandlerFunction
           BucketName: !Sub ${AWS::StackName}
+  AddADUser:
+      Type: 'AWS::CloudFormation::Stack'
+      DeletionPolicy: Delete
+      Properties:
+        TemplateURL: ./create_ad_user.yaml
+        Parameters:
+          IdpHandlerLayerArn: !GetAtt CustomIdP.Outputs.IdpHandlerLayer
+          SecurityGroupsList: !GetAtt CustomIdP.Outputs.SecurityGroupsList
+          SubnetList: !GetAtt CustomIdP.Outputs.SubnetList
+          ADServerDNS: !GetAtt ManagedAD.Outputs.PrimaryDNS
+          ADServerPort: 389
+          ADDomainUser: 'Admin'
+          ADDomainUserPassword: !Ref DirectoryAdminPassword
+          ADSearchBase: !Ref DirectorySearchBase
+          ADSSL: 'false'
+          NewADUser: !Ref DirectoryNewUsername
 Outputs:
   DirectoryID:
     Description: ID of the MS Directory
