--- a/solutions/custom-idp/custom-idp.yaml
+++ b/solutions/custom-idp/custom-idp.yaml
@@ -1,6 +1,6 @@
 AWSTemplateFormatVersion: '2010-09-09'
 Transform: AWS::Serverless-2016-10-31
-Description: >
+Description: 'This template deploys custom IdP including VPC, Subnets, Security Groups, IdP Handler Lambda and API Gateway (if selected)'
 
 Parameters:
   CreateVPC:
@@ -630,6 +630,9 @@ Resources:
             
 
 Outputs:
+  IdpHandlerLayer:
+    Description: IDP Handler Layer
+    Value: !Ref IdpHandlerLayer
   IdpHandlerFunction:
     Description: IDP Handler Arn
     Value: !GetAtt IdpHandlerFunction.Arn
