Fixed missing imports in Okta module; Removed AllowedPattern constraint in template

--- a/solutions/custom-idp/custom-idp.yaml
+++ b/solutions/custom-idp/custom-idp.yaml
@@ -37,13 +37,12 @@ Parameters:
   UserNameDelimiter:
     Description: Delimiter for user name
     Type: String
-    Default: '@'
+    Default: '$'
     AllowedValues:
       - '@'
       - '$'
       - '\\'
       - '/'
-    AllowedPattern: '[@\\\/\-]'
     MaxLength: 1
     MinLength: 1
   LogLevel:
