update to return role arn

--- a/solutions/custom-idp/examples/transferserver/transfer-server-template.yaml
+++ b/solutions/custom-idp/examples/transferserver/transfer-server-template.yaml
@@ -124,5 +124,5 @@ Outputs:
     Value: !Ref SFTPServerS3Bucket
   SFTPUserRole:
     Description: Transfer Server FTP User Role
-    Value: !Ref SFTPUserRole
+    Value: !GetAtt SFTPUserRole.Arn
 
