Added server pool support to LDAP; README and screenshots updates; Implemented Lambda Power Tools for observability enhancements

--- a/solutions/custom-idp/Pipfile
+++ b/solutions/custom-idp/Pipfile
@@ -9,7 +9,7 @@ argon2-cffi = "*"
 ldap3 = "*"
 urllib3 = "*"
 aws-xray-sdk = "*"
-
+aws-lambda-powertools = {extras = ["tracer"], version = "*"}
 
 [dev-packages]
 
