Updates to issue forms

--- a/.github/ISSUE_TEMPLATE/enhancement_request.yml
+++ b/.github/ISSUE_TEMPLATE/enhancement_request.yml
@@ -1,7 +1,7 @@
 ---
 name: Enhancement request
 about: Suggest an idea to enhance some existing feature
-title: '[Enhancement]: <title>'
+title: '[Enhancement]: TITLE HERE'
 labels: ["enhancement", "Needs Triage"]
 assignees: ''
 
