--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -1,6 +1,6 @@
-name: Bug report
-description: Create a report to help us improve.
-tile: '[BUG] <title>'
+name: "Bug report"
+description: "Create a report to help us improve."
+title: "[BUG] <title>"
 labels: ["bug", "Needs Triage"]
 
 body:
