--- a/solutions/custom-idp/custom-idp.yaml
+++ b/solutions/custom-idp/custom-idp.yaml
@@ -3,6 +3,11 @@ Transform: AWS::Serverless-2016-10-31
 Description: 'This template deploys custom IdP including VPC, Subnets, Security Groups, IdP Handler Lambda and API Gateway (if selected)'
 
 Parameters:
+  UseVPC:
+    Description: 'When set, the custom IdP Lambda will be attached to a VPC. VPC attachment is typically required when connecting to a private IdP such as Active Directory or LDAP. When set to true, either CreateVPC or VpcId, Subnets, and SecurityGroups must be set. Default is true.'
+    Type: String
+    AllowedValues: ['true', 'false']
+    Default: 'true'
   CreateVPC:
     Description: 'When set, creates a pre-configured VPC for the custom IDP solution and uses it for the custom IdP Lambda function to simplify deployment. The VPC will contain public/private subnets for two AZs, two NAT Gateways, a Security Group, and a DynamoDB Gateway endpoint. If this is set to false, VPC, subnet, and security group information must be provided.'
     Type: String
@@ -80,6 +85,7 @@ Metadata:
         - Label: 
             default: Network Configuration
           Parameters:
+            - UseVPC
             - CreateVPC
             - VPCCIDR
             - VpcId
@@ -100,7 +106,8 @@ Metadata:
             - IdentityProvidersTableName
 
 Conditions:
-  CreateVPC: !Equals [!Ref CreateVPC, 'true']
+  UseVPC: !Equals [!Ref UseVPC, 'true']
+  CreateVPC: !And [!Equals [!Ref UseVPC, 'true'], !Equals [!Ref CreateVPC, 'true']]
   SecretsManagerPermission: !Equals [!Ref SecretsManagerPermissions, 'true']
   ApiEnabled: !Equals [!Ref ProvisionApi, 'true']
   TracingEnabled: !Equals [!Ref EnableTracing, 'true']
@@ -152,8 +159,11 @@ Resources:
           LOGLEVEL: !Ref LogLevel
           AWS_XRAY_TRACING_NAME: !Sub ${AWS::StackName}
       VpcConfig:
-        SubnetIds: !If [CreateVPC, [!Ref PrivateSubnet1,!Ref PrivateSubnet2], !Ref Subnets]
-        SecurityGroupIds: !If [CreateVPC, [!Ref SecurityGroup], !Ref SecurityGroups]
+        !If
+          - UseVPC       
+          - SubnetIds: !If [CreateVPC, [!Ref PrivateSubnet1,!Ref PrivateSubnet2], !Ref Subnets]
+            SecurityGroupIds: !If [CreateVPC, [!Ref SecurityGroup], !Ref SecurityGroups]
+          - Ref: AWS::NoValue
       Architectures:
       - x86_64
       Policies:
@@ -650,12 +660,12 @@ Outputs:
   VPC:
     Description: The VPC that is used with the custom IdP solution.
     Value:
-      !If [CreateVPC, !Ref VPC, !Ref VpcId]   
+      !If [UseVPC, !If [CreateVPC, !Ref VPC, !Ref VpcId], '']
   SubnetList:
     Description: The subnets used by the Lambda function in the custom IdP solution.
     Value:
-      !If [CreateVPC, !Join [",", [!Ref PrivateSubnet1, !Ref PrivateSubnet2]], !Join [",", !Ref Subnets]]         
+      !If [UseVPC, !If [CreateVPC, !Join [",", [!Ref PrivateSubnet1, !Ref PrivateSubnet2]], !Join [",", !Ref Subnets]], '']
   SecurityGroupsList:
     Description: The VPC subnets attached to the Lambda function in the custom IdP solution.
     Value:
-      !If [CreateVPC, !Ref SecurityGroup,  !Join [",", !Ref SecurityGroups]] 
+      !If [UseVPC, !If [CreateVPC, !Ref SecurityGroup,  !Join [",", !Ref SecurityGroups]], '']
