--- a/solutions/custom-idp/Pipfile
+++ b/solutions/custom-idp/Pipfile
@@ -9,6 +9,7 @@ argon2-cffi = "*"
 ldap3 = "*"
 urllib3 = "*"
 aws-xray-sdk = "*"
+msal = "*"
 aws-lambda-powertools = {extras = ["tracer"], version = "*"}
 
 [dev-packages]
