--- a/solutions/custom-idp/custom-idp.yaml
+++ b/solutions/custom-idp/custom-idp.yaml
@@ -226,7 +226,7 @@ Resources:
   ApiCloudWatchLogsRole:
     Type: AWS::IAM::Role
     Properties:
-      RoleName: !Sub ${AWS::StackName}-api-cloudwatch-role
+      RoleName: !Sub ${AWS::StackName}-${AWS::Region}-api-cw
       AssumeRolePolicyDocument:
         Version: '2012-10-17'
         Statement:
@@ -381,7 +381,7 @@ Resources:
     Type: AWS::IAM::Role
     Condition: ApiEnabled
     Properties:
-      RoleName: !Sub "${AWS::StackName}-transfer-api-role"
+      RoleName: !Sub "${AWS::StackName}-${AWS::Region}-tf-api"
       AssumeRolePolicyDocument:    
         Version: '2012-10-17'
         Statement:
