--- a/solutions/custom-idp/examples/okta/transfer_okta_customIdp_server_template.yaml
+++ b/solutions/custom-idp/examples/okta/transfer_okta_customIdp_server_template.yaml
@@ -4,11 +4,11 @@ Parameters:
   UserNameDelimiter:
     Description: Delimiter used for username and identity provider. Only '@' is supported due to validation checks that AWS Transfer Family performs on the username. 
     Type: String
-    Default: '@'
+    Default: '@@'
     AllowedValues:
       - '@'
-    AllowedPattern: '[@\\\/\-]'
-    MaxLength: 1
+      - '@@'
+    MaxLength: 2
     MinLength: 1
 
   LogLevel:
