--- a/solutions/custom-idp/custom-idp.yaml
+++ b/solutions/custom-idp/custom-idp.yaml
@@ -1,6 +1,6 @@
 AWSTemplateFormatVersion: '2010-09-09'
 Transform: AWS::Serverless-2016-10-31
-Description: 'This template deploys custom IdP including VPC, Subnets, Security Groups, IdP Handler Lambda and API Gateway (if selected)'
+Description: 'AWS Transfer Family Custom IdP Solution (uksb-0vkcmapzwz)'
 
 Parameters:
   UseVPC:
